--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "all": "^0.0.0",
@@ -52,7 +54,8 @@
     "react-native-web": "~0.18.7",
     "react-navigation": "^3.11.1",
     "react-navigation-header-buttons": "^10.0.0",
-    "regression": "^2.0.1"
+    "regression": "^2.0.1",
+    "uuid": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
